@@ -344,6 +344,71 @@ DROP TABLE my_schema.my_spatial_table;
 	  </refsection>
 	</refentry>
 
+<refentry id="PostGIS_Extensions_Upgrade">
+	  <refnamediv>
+		<refname>PostGIS_Extensions_Upgrade</refname>
+
+		<refpurpose>Upgrades installed postgis packaged extensions (e.g. postgis_sfcgal, postgis_topology, postgis_sfcgal)
+		to latest installed version. Reports full postgis version and build configuration
+		infos after.</refpurpose>
+	  </refnamediv>
+
+	  <refsynopsisdiv>
+		<funcsynopsis>
+		  <funcprototype>
+			<funcdef>text <function>PostGIS_Extensions_Upgrade</function></funcdef>
+
+			<paramdef></paramdef>
+		  </funcprototype>
+		</funcsynopsis>
+	  </refsynopsisdiv>
+
+	  <refsection>
+		<title>Description</title>
+
+		<para>Upgrades installed postgis packaged extensions
+		to latest installed version. Only extensions you have installed in the database will be upgraded and if they are already at last installed version,
+		they will not be upgraded. Reports full postgis version and build configuration
+		infos after.  This is short-hand for doing multiple ALTER EXTENSION .. UPDATE for each postgis extension.
+		Currently only tries to upgrade extensions postgis, postgis_sfcgal, postgis_topology, and postgis_tiger_geocoder.</para>
+
+		<para>Availability: 2.5.0</para>
+	  </refsection>
+
+	  <refsection>
+		<title>Examples</title>
+
+		<programlisting>SELECT PostGIS_Extensions_Upgrade();</programlisting>
+<screen>
+NOTICE:  ALTER EXTENSION postgis_tiger_geocoder UPDATE TO "2.5.0dev";
+CONTEXT:  PL/pgSQL function postgis_extensions_upgrade() line 10 at RAISE
+NOTICE:  ALTER EXTENSION postgis_topology UPDATE TO "2.5.0dev";
+CONTEXT:  PL/pgSQL function postgis_extensions_upgrade() line 10 at RAISE
+
+							   postgis_extensions_upgrade
+----------------------------------------------------------------------------------
+POSTGIS="2.5.0dev r15966" [EXTENSION] PGSQL="100"
+GEOS="3.7.0dev-CAPI-1.11.0 8fe2ce6" SFCGAL="1.3.1"
+PROJ="Rel. 4.9.3, 15 August 2016" GDAL="GDAL 2.2.2, released 2017/09/15"
+LIBXML="2.7.8" LIBJSON="0.12" LIBPROTOBUF="1.2.1" TOPOLOGY RASTER
+(1 row)</screen>
+	  </refsection>
+
+	  <refsection>
+		<title>See Also</title>
+
+		<para>
+		<xref linkend="upgrading" />,
+		<xref linkend="PostGIS_GEOS_Version" />,
+		<xref linkend="PostGIS_Lib_Version" />,
+		<xref linkend="PostGIS_LibXML_Version" />,
+		<xref linkend="PostGIS_PROJ_Version" />,
+		<xref linkend="PostGIS_Version" />
+		</para>
+	  </refsection>
+	</refentry>
+
+
 
 	<refentry id="PostGIS_Full_Version">
 	  <refnamediv>
