@@ -3,6 +3,7 @@ PostGIS 2.5.0
 * New Features *
   - #3876, ST_Angle function (Rémi Cura)
   - #3564, ST_LineInterpolatePoints (Dan Baston)
+  - #3896, PostGIS_Extensions_Upgrade()
 
 * Breaking Changes *
   - #3885, version number removed from address_standardize lib file
